--- a/19182.4/interfaces/hardcode/theme.css
+++ b/19182.4/interfaces/hardcode/theme.css
@@ -1,4 +1,4 @@
-/** LCARS SDK 16276.31 - USS Not Affiliated Theme
+/** LCARS SDK 19182.4 - Project Specific Theme CSS
 * This file is a part of the LCARS SDK.
 * https://github.com/AricwithanA/LCARS-SDK/blob/master/LICENSE.md
 * For more information please go to http://www.lcarssdk.org.
