--- a/19182.4/lcars-sdk/widgets/sdk_default-bracket/default-bracket.css
+++ b/19182.4/lcars-sdk/widgets/sdk_default-bracket/default-bracket.css
@@ -73,8 +73,11 @@
     right: 30px;	
 }
 
-.sdk.default-bracket .animated{ position:absolute; max-width:100%;min-width:100%;  -webkit-animation: bracketAnimation 5s linear infinite !important; animation: bracketAnimation 5s linear infinite !important;}
-.sdk.default-bracket .animated{ position:absolute;  max-width:100%; min-width:100%; -webkit-animation: bracketAnimationR 5s linear infinite !important; animation: bracketAnimationR 5s linear infinite !important; }
+//.sdk.default-bracket .animated { position:absolute; max-width:100%; min-width:100%; -webkit-animation: bracketAnimation 5s linear infinite !important; animation: bracketAnimation 5s linear infinite !important;}
+//.sdk.default-bracket .animatedR{ position:absolute; max-width:100%; min-width:100%; -webkit-animation: bracketAnimationR 5s linear infinite !important; animation: bracketAnimationR 5s linear infinite !important;}
+
+.sdk.default-bracket > .column .bar .bar{ position:absolute; max-width:100%;min-width:100%;  -webkit-animation: bracketAnimation 5s linear infinite !important; animation: bracketAnimation 5s linear infinite !important;}
+.sdk.default-bracket > .column ~ .column .bar .bar{ position:absolute;  max-width:100%; min-width:100%; -webkit-animation: bracketAnimationR 5s linear infinite !important; animation: bracketAnimationR 5s linear infinite !important; }
 
 @-webkit-keyframes bracketAnimation {
     0%   { height:50%; top:25%;}
