elbow staggered delayed flash

--- a/19182.4/interfaces/color-generator/theme.css
+++ b/19182.4/interfaces/color-generator/theme.css
@@ -28,7 +28,7 @@ border-left-color:#ffffff !important;
 
 [class*="bg-"], 
 [class*="bg-"] > *:not([class*="bg-"]){
-	transition:background-color .25s linear, border .25s linear;
+	transition:background-color linear, border linear;
 }
 
 
